infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookverse-ingress
  namespace: bookverse
spec:
  rules:
    - http:
        paths:
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80



    # - host: bookverse.local
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: gateway
    #             port:
    #               number: 80
